# iicp-client-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  intent-risk-taxonomy.json  mcp-tool-risk-taxonomy.json
.github/workflows/: ci.yml  publish.yml  quality.yml  release.yml
examples/: node.rs  quickstart.rs
parity/: arcp-coordinator-transcript-v0.json  arcp-evaluator-v0.json  cip-conformance-v0.json  cip-consumer-cosignature-transcript-v1.json  cip-consumer-cosignature-v1.json  cip-economic-attribution-v0.json  dispatch-admission-v2.json  dispatch-route-ticket-v1.json  dispatch-ticket-trust-store-v1.json  dispatch-ticket-trust-v2-crypto.json  policy-data-handling-v0.json  policy-detail-disclosure-v0.json  policy-operational-evidence-v0.json  profile-compatibility-v0.json  profile-negotiation-v0.json  sdk-request-projection-v0.json  selection-v1.json  service-lifecycle-accounting-v1.json  service-lifecycle-authorization-v1.json  service-lifecycle-distributed-v1.json  service-lifecycle-identity-v1.json  service-lifecycle-persistence-v1.json  service-lifecycle-runtime-control-v1.json  service-lifecycle-v1.json
src/: availability.rs  backend_stability.rs  cip_policy.rs  client.rs  concurrency.rs  confidentiality.rs  conformance.rs  consumer_token.rs  delegation.rs  dispatch_admission.rs  dispatch_admission_sqlite.rs  dispatch_ticket.rs  dispatch_ticket_trust.rs  endpoint_security.rs  errors.rs  http.rs  idempotency.rs  identity.rs  iicp_tcp.rs  instance_lock.rs  jcs.rs  lib.rs  mcp_policy.rs  nat_detection.rs  node.rs  node_log.rs  operator_crypto.rs  peer_manager.rs  policy.rs  policy_data_handling.rs  policy_detail_disclosure.rs  policy_manifest.rs  policy_operational_evidence.rs  pricing.rs  profile_compatibility.rs  qualify.rs  recovery.rs  relay_session.rs  relay_ticket.rs  relay_worker_client.rs  (+14 more)
src/backends/: anthropic.rs  llamacpp.rs  meshllm.rs  mod.rs  openai_compat.rs  vllm.rs
src/proxy/: cip.rs  mod.rs
tests/: backends_tests.rs  cip_arcp_fixture.rs  cip_economic_fixture.rs  cip_policy_tests.rs  client_tests.rs  concurrency_tests.rs  conformance_tests.rs  consumer_cosignature_fixture.rs  consumer_cosignature_transcript_fixture.rs  consumer_token_tests.rs  credits_cli_tests.rs  dispatch_admission_sqlite.rs  dispatch_ticket_trust_crypto.rs  dispatch_ticket_trust_runtime.rs  dispatch_ticket_trust_store.rs  e2e_local.rs  iicp_tcp_tests.rs  integration.rs  mcp_gateway_tests.rs  nat_detection_tests.rs  native_framing_fixture.rs  node_inference.rs  node_register_tests.rs  node_tests.rs  policy_data_handling.rs  policy_detail_disclosure.rs  policy_operational_evidence.rs  pricing_tests.rs  proxy_e2e.rs  proxy_fixtures.json  relay_http_poll_tests.rs  request_projection_fixture.rs  serve_multiplex_tests.rs  service_lifecycle.rs  service_lifecycle_accounting.rs  service_lifecycle_distributed.rs  service_lifecycle_identity.rs  service_lifecycle_sqlite.rs  tunnel_tests.rs
tests/fixtures/: endpoint-security-v1.json  native-framing-v1.json
